Fixed the menu.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ body_class: post-template
 <header class="main-header post-head {% if page.image %}" style="background-image: url({{page.image}}){% else %}no-cover{% endif %}">
     <nav class="main-nav {% if page.image %}overlay{% endif %} clearfix">
         {% if site.logo %}<a class="blog-logo" href="{{site.url}}"><img src="{{site.logo}}" alt="{{site.title}}" /></a>{% endif %}
-        {% if site.navigation %}
+        {% if site.data.navigation %}
             <a class="menu-button icon-menu" href="#"><span class="word">Menu</span></a>
         {% endif %}
     </nav>
