--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,7 +5,7 @@ body_class: home-template
 <header class="main-header {% if site.cover %}" style="background-image: url({{site.cover}}){% else %}no-cover{% endif %}">
     <nav class="main-nav overlay clearfix">
         {% if site.logo %}<a class="blog-logo" href="{{site.url}}"><img src="{{site.logo}}" alt="{{site.title}}" /></a>{% endif %}
-        {% if site.navigation %}
+        {% if site.data.navigation %}
             <a class="menu-button icon-menu" href="#"><span class="word">Menu</span></a>
         {% endif %}
     </nav>
