Fixed post class.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,7 +12,7 @@ body_class: post-template
 </header>
 
 <main class="content" role="main">
-    <article class="post featured">
+    <article class="post {{page.post_class}}">
 
         {% include subscribe.html %}
 
