--- a/_includes/loop.html
+++ b/_includes/loop.html
@@ -3,7 +3,7 @@
 </div>
 
 {% for post in site.posts %}
-<article class="{{post_class}}">
+<article class="post {{post.post_class}}">
     <header class="post-header">
         <h2 class="post-title"><a href="{{post.url}}">{{post.title}}</a></h2>
     </header>
