--- a/_includes/subscribe.html
+++ b/_includes/subscribe.html
@@ -2,6 +2,8 @@
     style="text-align: center;"
     >
 
+    <!--
+
     <p>
         <a href="https://www.patreon.com/thedatawrangler">Support this blog on Patreon!</a>
     </p>
@@ -10,9 +12,10 @@
         Learn or practice stock market trading with <a href="https://www.market-wizard.com.au/">Market Wizard</a>
     </p>
 
+    -->
+
     <p>
-        Want to learn practical data wrangling and analysis? 
-        Please checkout my book <a href="http://bit.ly/2t2cJu2">Data Wrangling with JavaScript!</a>
+        Learn data wrangling, analysis and visualization with my book <a href="http://bit.ly/2t2cJu2">Data Wrangling with JavaScript!</a>
     </p>
 
     <!-- Begin MailChimp Signup Form -->
