Fixed post links.

--- a/_includes/loop.html
+++ b/_includes/loop.html
@@ -5,10 +5,10 @@
 {% for post in site.posts %}
 <article class="post {{post.post_class}}">
     <header class="post-header">
-        <h2 class="post-title"><a href="{{post.url}}">{{post.title}}</a></h2>
+        <h2 class="post-title"><a href="{{site.baseurl}}{{post.url}}">{{post.title}}</a></h2>
     </header>
     <section class="post-excerpt">
-        <p>{{post.excerpt}} <a class="read-more" href="{{post.url}}">&raquo;</a></p>
+        <p>{{post.excerpt}} <a class="read-more" href="{{site.baseurl}}{{post.url}}">&raquo;</a></p>
     </section>
     <footer class="post-meta">
         {% if post.author.image %}
