--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -56,15 +56,15 @@ body_class: post-template
 
             <section class="share">
                 <h4>Share this post</h4>
-                <a class="icon-twitter" href="https://twitter.com/intent/tweet?text={{encode page.title}}&amp;url={{page.url absolute="true"}}"
+                <a class="icon-twitter" href="https://twitter.com/intent/tweet?text={{page.title}}&amp;url={{site.url}}{{page.url}}"
                     onclick="window.open(this.href, 'twitter-share', 'width=550,height=235');return false;">
                     <span class="hidden">Twitter</span>
                 </a>
-                <a class="icon-facebook" href="https://www.facebook.com/sharer/sharer.php?u={{page.url absolute="true"}}"
+                <a class="icon-facebook" href="https://www.facebook.com/sharer/sharer.php?u={{site.url}}{{page.url}}"
                     onclick="window.open(this.href, 'facebook-share','width=580,height=296');return false;">
                     <span class="hidden">Facebook</span>
                 </a>
-                <a class="icon-google-plus" href="https://plus.google.com/share?url={{page.url absolute="true"}}"
+                <a class="icon-google-plus" href="https://plus.google.com/share?url={{site.url}}{{page.url}}"
                    onclick="window.open(this.href, 'google-plus-share', 'width=490,height=530');return false;">
                     <span class="hidden">Google+</span>
                 </a>
@@ -76,8 +76,8 @@ body_class: post-template
 <script>
 
 var disqus_config = function () {
-this.page.url = '{{url absolute="true"}}';
-this.page.identifier = 'ghost-{{id}}';
+this.page.url = '{{site.baseurl}}{{page.url}}';
+this.page.identifier = 'ghost-9'; //todo:
 };
 
 (function() { // DON'T EDIT BELOW THIS LINE
