--- a/_includes/loop.html
+++ b/_includes/loop.html
@@ -3,6 +3,8 @@
 </div>
 
 {% for post in site.posts %}
+{% assign author = site.data.authors[post.author] %}
+
 <article class="post {{post.post_class}}">
     <header class="post-header">
         <h2 class="post-title"><a href="{{site.baseurl}}{{post.url}}">{{post.title}}</a></h2>
@@ -11,11 +13,11 @@
         <p>{{post.excerpt}} <a class="read-more" href="{{site.baseurl}}{{post.url}}">&raquo;</a></p>
     </section>
     <footer class="post-meta">
-        {% if post.author.image %}
-            <img class="author-thumb" src="{{post.author.image}}" alt="{{post.author.name}}" nopin="nopin" />
+        {% if author.image %}
+            <img class="author-thumb" src="{{author.image}}" alt="{{author.name}}" nopin="nopin" />
         {% endif %}
 
-        {{post.author}}
+        {{author.name}}
 
         <time class="post-date" datetime="{{post.date format="YYYY-MM-DD"}}">{{post.date | date: "%e %b %Y"}}</time>
     </footer>
