Experimenting with disqus comments.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -74,12 +74,17 @@ body_class: post-template
 
         </footer>
 
+
+Test1
+
 <div id="disqus_thread"></div>
 <script>
 
+Test2
+
 var disqus_config = function () {
 this.page.url = '{{site.baseurl}}{{page.url}}';
-this.page.identifier = 'ghost-9'; //todo:
+this.page.identifier = 'ghost-12'; //todo:
 };
 
 (function() { // DON'T EDIT BELOW THIS LINE
