Experimenting with disqus comments.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,6 +14,7 @@ body_class: post-template
 </header>
 
 <main class="content" role="main">
+    Test3 
     <article class="post {{page.post_class}}">
 
         {% include subscribe.html %}
@@ -78,9 +79,12 @@ body_class: post-template
 Test1
 
 <div id="disqus_thread"></div>
-<script>
 
 Test2
+
+<script>
+
+
 
 var disqus_config = function () {
 this.page.url = '{{site.baseurl}}{{page.url}}';
