Fixed broken endif tag.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -53,7 +53,7 @@ body_class: post-template
                 {% endif %}
                 <div class="author-meta">
                     {% if author.location %}<span class="author-location icon-location">{{author.location}}</span>{% endif %}
-                    {% if author.website %}<span class="author-link icon-link"><a href="{{author.website}}">{{author.website}}</a></span>{% endif %
+                    {% if author.website %}<span class="author-link icon-link"><a href="{{author.website}}">{{author.website}}</a></span>{% endif %}
                 </div>
             </section>
 
