--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -8,6 +8,6 @@
             <li class="nav-{{nav.slug}}{%if page.url == nav.url %} nav-current{% endif %}" role="presentation"><a href="{{nav.url}}">{{nav.label}}</a></li>
         {% endfor %}
     </ul>
-    <a class="subscribe-button icon-feed" href="{{site.url}}/feed.xml/">Subscribe</a>
+    <a class="subscribe-button icon-feed" href="{{site.url}}/feed.xml">Subscribe</a>
 </div>
 <span class="nav-cover"></span>
