--- a/_includes/subscribe.html
+++ b/_includes/subscribe.html
@@ -18,6 +18,10 @@
         Learn data wrangling, analysis and visualization with my book <a href="http://bit.ly/2t2cJu2">Data Wrangling with JavaScript!</a>
     </p>
 
+    <p>
+        Do your prototyping and exploratory data analysis in JavaScript with <a href="http://www.data-forge-notebook.com/">Data-Forge Notebook</a>
+    </p>
+
     <!-- Begin MailChimp Signup Form -->
     <style type="text/css">
         /* MailChimp Form Embed Code - Classic - 12/17/2015 v10.7 */
