--- a/_layouts/notebook.html
+++ b/_layouts/notebook.html
@@ -12,6 +12,9 @@
 
     <link rel="shortcut icon" href="favicon.ico">
 
+    <link href="/assets/" rel="stylesheet">
+    <link rel="stylesheet" data-name="vs/editor/editor.main" href="/assets/node_modules/monaco-editor/min/vs/editor/editor.main.css">
+
     <link rel="stylesheet" type="text/css" href="/assets/css/screen.css" />
     <link rel="stylesheet" type="text/css" href="/assets/css/notebook-styles.css" />
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Merriweather:300,700,700italic,300italic|Open+Sans:700,400" />
@@ -52,7 +55,7 @@
 
     <script src="/assets/node_modules/d3/dist/d3.js"></script>
     <script src="/assets/node_modules/c3/c3.js"></script>
-    <script>var require = { paths: { 'vs': './node_modules/monaco-editor/min/vs' } };</script>
+    <script>var require = { paths: { 'vs': '/assets/node_modules/monaco-editor/min/vs' } };</script>
     <script src="/assets/node_modules/monaco-editor/min/vs/loader.js"></script>
     <script src="/assets/node_modules/monaco-editor/min/vs/editor/editor.main.nls.js"></script>
     <script src="/assets/node_modules/monaco-editor/min/vs/editor/editor.main.js"></script>
