--- a/_layouts/notebook.html
+++ b/_layouts/notebook.html
@@ -15,6 +15,13 @@
     <link href="/assets/node_modules/c3/c3.min.css" rel="stylesheet">
     <link rel="stylesheet" data-name="vs/editor/editor.main" href="/assets/node_modules/monaco-editor/min/vs/editor/editor.main.css">
 
+    <link rel="stylesheet" type="text/css" href="/assets/css/screen.css" />
+    <style>
+        pre {
+            margin: 0px;
+            background: transparent;
+        }
+    </style>
     <link rel="stylesheet" type="text/css" href="/assets/css/notebook-styles.css" />
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Merriweather:300,700,700italic,300italic|Open+Sans:700,400" />
 
