--- a/_layouts/notebook.html
+++ b/_layouts/notebook.html
@@ -18,8 +18,11 @@
     <link rel="stylesheet" type="text/css" href="/assets/css/screen.css" />
     <style>
         pre {
-            margin: 0px;
+            margin: 0;
             background: transparent;
+            border-radius: 0;
+            padding: 0;
+            border: none;
         }
     </style>
     <link rel="stylesheet" type="text/css" href="/assets/css/notebook-styles.css" />
