--- a/_layouts/notebook.html
+++ b/_layouts/notebook.html
@@ -60,20 +60,8 @@
             <article class="post {{page.post_class}}">
         
                 {% include subscribe.html %}
-        
-                <br>
                 
-                <header class="post-header">
-                    <h1 class="post-title">{{page.title}}</h1>
-                    <section class="post-meta">
-                        <time class="post-date" datetime="{{page.date | date: "%e %b %Y"}}">{{page.date | date: "%e %b %Y"}}</time>
-                    </section>
-                </header>
-        
-                <section class="post-content">
-        
-                    <!-- Go to www.addthis.com/dashboard to customize your tools --> <div class="addthis_inline_follow_toolbox"></div>
-                    
+                <section>
                     {{content}}
                 </section>
         
@@ -84,21 +72,7 @@
                         <a class="img" href="{{author.url}}" style="background-image: url({{author.image}})"><span class="hidden">{{author.name}}'s Picture</span></a>
                     </figure>
                     {% endif %}
-        
-                    <section class="author">
-                        <h4><a href="{{url}}">{{author.name}}</a></h4>
-        
-                        {% if author.bio %}
-                            <p>{{author.bio}}</p>
-                        {% else %}
-                            <p>Read <a href="{{author.url}}">more posts</a> by this author.</p>
-                        {% endif %}
-                        <div class="author-meta">
-                            {% if author.location %}<span class="author-location icon-location">{{author.location}}</span>{% endif %}
-                            {% if author.website %}<span class="author-link icon-link"><a href="{{author.website}}">{{author.website}}</a></span>{% endif %}
-                        </div>
-                    </section>
-        
+                
                     <section class="share">
                         <h4>Share this post</h4>
                         <a class="icon-twitter" href="https://twitter.com/intent/tweet?text={{page.title}}&amp;url={{site.url}}{{page.url}}"
