--- a/_layouts/notebook.html
+++ b/_layouts/notebook.html
@@ -57,7 +57,7 @@
         
         <main class="content" role="main">
         
-            <article class="post {{page.post_class}}">
+            <article>
         
                 {% include subscribe.html %}
                 
