--- a/_layouts/notebook.html
+++ b/_layouts/notebook.html
@@ -61,7 +61,7 @@
         
                 {% include subscribe.html %}
                 
-                <section>
+                <section class="notebook">
                     {{content}}
                 </section>
         
