Tweaked font size.

--- a/_includes/subscribe.html
+++ b/_includes/subscribe.html
@@ -14,11 +14,11 @@
 
     -->
 
-    <p>
+    <p style="font-size: 1.4rem;">
         Learn data wrangling, analysis and visualization with my book <a href="http://bit.ly/2t2cJu2">Data Wrangling with JavaScript!</a>
     </p>
 
-    <p>
+    <p style="font-size: 1.4rem;">
         Do your prototyping and exploratory data analysis in JavaScript with <a href="http://www.data-forge-notebook.com/">Data-Forge Notebook</a>
     </p>
 
