--- a/_includes/subscribe.html
+++ b/_includes/subscribe.html
@@ -19,7 +19,7 @@
     </p>
 
     <p style="font-size: 1.4rem;">
-        Do your prototyping and exploratory data analysis in JavaScript with <a href="http://www.data-forge-notebook.com/">Data-Forge Notebook</a>
+        Data analysis and visualization in JavaScript with <a href="http://www.data-forge-notebook.com/">Data-Forge Notebook</a>
     </p>
 
     <!-- Begin MailChimp Signup Form -->
