--- a/_layouts/notebook.html
+++ b/_layouts/notebook.html
@@ -12,10 +12,11 @@
 
     <link rel="shortcut icon" href="favicon.ico">
 
+    <link href="https://fonts.googleapis.com/css?family=Andada|Source+Code+Pro" rel="stylesheet">
     <link href="/assets/node_modules/c3/c3.min.css" rel="stylesheet">
     <link rel="stylesheet" data-name="vs/editor/editor.main" href="/assets/node_modules/monaco-editor/min/vs/editor/editor.main.css">
 
-    <link rel="stylesheet" type="text/css" href="/assets/css/screen.css" />
+    <link rel="stylesheet" type="text/css" href="/assets/css/base.css" />
     <style>
         pre {
             margin: 0;
@@ -26,7 +27,6 @@
         }
     </style>
     <link rel="stylesheet" type="text/css" href="/assets/css/notebook-styles.css" />
-    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Merriweather:300,700,700italic,300italic|Open+Sans:700,400" />
 
     <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
