--- a/assets/css/notebook-styles.css
+++ b/assets/css/notebook-styles.css
@@ -1,3 +1,15 @@
+body {
+    font-family: 'Andada', serif;
+}
+
+.output-border {
+    font-family: 'Source Code Pro', monospace;
+    font-size: 0.85em;
+}
+
+.cell-border {
+    font-family: 'Source Code Pro', monospace;
+}
 
 .cell-border {
     border: 1px dashed #999;
