--- a/_layouts/notebook.html
+++ b/_layouts/notebook.html
@@ -12,7 +12,7 @@
 
     <link rel="shortcut icon" href="favicon.ico">
 
-    <link href="https://fonts.googleapis.com/css?family=Andada|Source+Code+Pro" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Exo|Source+Code+Pro" rel="stylesheet">
     <link href="/assets/node_modules/c3/c3.min.css" rel="stylesheet">
     <link rel="stylesheet" data-name="vs/editor/editor.main" href="/assets/node_modules/monaco-editor/min/vs/editor/editor.main.css">
 
