--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,8 @@
 
     <link rel="stylesheet" type="text/css" href="/assets/css/base.css" />
     <link rel="stylesheet" type="text/css" href="/assets/css/screen.css" />
-    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Merriweather:300,700,700italic,300italic|Open+Sans:700,400" />
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Merriweather:300,700,700italic,300italic|Open+Sans:700,400|Noto+Sans|Raleway" />
+    <link rel="stylesheet" type="text/css" href="/assets/css/tailwind.css" />
 
     <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
