--- a/_includes/subscribe.html
+++ b/_includes/subscribe.html
@@ -70,8 +70,8 @@
                         name="EMAIL" 
                         class="required email" 
                         id="mce-EMAIL"
-                        style="height: 2em !important; width: 20em;"
-                        placeholder="Be updated before anyone else..." 
+                        style="height: 2em !important; width: 90%;"
+                        placeholder="Enter your email" 
                         >
                 </span>
                 <input 
@@ -79,7 +79,7 @@
                     value="Subscribe" 
                     name="subscribe" 
                     id="mc-embedded-subscribe"
-                    style="height: 2.8em;" 
+                    style="height: 2.8em; width: auto;" 
                     >
                 <div for="mce-EMAIL" class="mce_inline_error" style="display:none"></div>
                 <div id="mce-responses" class="clear">
