--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -76,82 +76,29 @@ body_class: post-template
                 </div>
             </div>
             <div class="w-full md:w-1/4 lg:w-1/4 xl:w-1/4">
-                <aside>
-                    <h3><b>Support</b> my work:</h3>
-                    <div 
-                        class="flex flex-col items-center text-center border rounded dfn-ad p-4"
-                        style="background-color: #4182E4;"
-                        >
-                        <a 
-                            target="_blank"
-                            href="https://www.data-forge-notebook.com" 
-                            >
-                            <img 
-                                class="w-full" 
-                                src="/content/images/2019/10/dfn-logo.png" 
-                                alt="Data-Forge Notebook"
-                                >
-                        </a>
-                        <div class="text-2xl mt-4 leading-normal">Exploratory coding, data analysis and visualization for JavaScript and TypeScript</div>
-                        <a 
-                            target="_blank"
-                            href="https://www.data-forge-notebook.com" 
-                            class="inline-block font-bold border rounded text-blue-500 border-white hover:text-blue-700 bg-white p-8 pt-3 pb-3 mt-8"
-                            >
-                            Learn more
-                        </a>
-                        <div class="text-2xl mt-4 leading-snug">Limited availability <span class="font-bold">40% off</span> with discount code TDW201910</div>
-                    </div>
-                    <div 
-                        class="flex flex-col items-center text-center border rounded dfn-ad p-4 mt-8"
-                        style="background-color: #01313F;"
-                        >
-                        <a 
-                            target="_blank"
-                            href="http://bit.ly/2t2cJu2" 
-                            >
-                            <img 
-                                class="w-full" 
-                                src="/content/images/2019/10/JSDW.png" 
-                                alt="Data Wrangling with JavaScript"
-                                >
-                        </a>
-                        <div class="text-2xl mt-4 leading-normal">A practical and comprehensive guide to working with data in JavaScript</div>
-                        <a 
-                            target="_blank"
-                            href="http://bit.ly/2t2cJu2" 
-                            class="inline-block font-bold border rounded text-blue-500 border-white hover:text-blue-700 bg-white p-8 pt-3 pb-3 mt-8"
-                            >
-                            Learn more
-                        </a>
-                    </div>
-
-                    {% include subscribe.html %}
-
-                </aside>
+                {% include support.html %}
             </div>
         </div>
 
+        <div id="disqus_thread"></div>
 
-<div id="disqus_thread"></div>
-
-<script>
-
+        <script>
 
 
-var disqus_config = function () {
-this.page.url = '{{site.url}}{{site.baseurl}}{{page.url}}';
-this.page.identifier = '{{page.disqus_id}}'
-};
 
-(function() { // DON'T EDIT BELOW THIS LINE
-var d = document, s = d.createElement('script');
-s.src = '//the-data-wrangler.disqus.com/embed.js';
-s.setAttribute('data-timestamp', +new Date());
-(d.head || d.body).appendChild(s);
-})();
-</script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+        var disqus_config = function () {
+        this.page.url = '{{site.url}}{{site.baseurl}}{{page.url}}';
+        this.page.identifier = '{{page.disqus_id}}'
+        };
+
+        (function() { // DON'T EDIT BELOW THIS LINE
+        var d = document, s = d.createElement('script');
+        s.src = '//the-data-wrangler.disqus.com/embed.js';
+        s.setAttribute('data-timestamp', +new Date());
+        (d.head || d.body).appendChild(s);
+        })();
+        </script>
+        <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
     
     </article>
 </main>
