Added links to BMDK.

--- a/_includes/support.html
+++ b/_includes/support.html
@@ -24,6 +24,31 @@
         </a>
         <div class="text-2xl mt-4 leading-snug">Limited availability <span class="font-bold">40% off</span> with discount code TDW201910</div>
     </div>
+
+    <div 
+        class="flex flex-col items-center text-center border rounded p-4 mt-8 dfn-ad"
+        style="background-color: #313130;"
+        >
+        <a 
+            target="_blank"
+            href="http://bit.ly/2o0aDsP" 
+            >
+            <img 
+                class="w-full" 
+                src="/content/images/2019/10/BMDK.png" 
+                alt="Bootstrapping Microservices with Docker, Kubernetes and Terraform"
+                >
+        </a>
+        <div class="text-2xl mt-4 leading-normal">A project-based guide to building a microservices application with modern tooling</div>
+        <a 
+            target="_blank"
+            href="http://bit.ly/2o0aDsP" 
+            class="inline-block font-bold border rounded text-blue-500 border-white hover:text-blue-700 bg-white p-8 pt-3 pb-3 mt-8"
+            >
+            Learn more
+        </a>
+    </div>
+
     <div 
         class="flex flex-col items-center text-center border rounded p-4 mt-8 dfn-ad"
         style="background-color: #01313F;"
