--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -356,7 +356,7 @@ pre {
     font-size: 0.9em;
     white-space: pre;
     overflow: auto;
-    background: #F7FAFB;
+    background: #DEE1E1;
     border-radius: 3px;
 }
 
