--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,6 +19,10 @@ body_class: post-template
 
         <div class="flex flex-wrap">
             <div class="w-full md:w-3/4 lg:w-3/4 xl:w-3/4">
+                <div class="pr-4 mb-4">
+                    <div class="text-2xl text-center">Be updated before anyone else...</div>
+                    {% include subscribe.html %}
+                </div>
                 <div class="pr-4">
                     <header class="post-header">
                         <h1 class="post-title">{{page.title}}</h1>
