--- a/_includes/support.html
+++ b/_includes/support.html
@@ -1,14 +1,14 @@
 <aside>
-    <div class="dfn-ad text-2xl text-black text-center">Be updated before anyone else...</div>
+    <div class="mt-1 dfn-ad text-2xl text-black text-center">Be updated before anyone else...</div>
     <div 
-        class="mt-1 p-2 dfn-ad text-black border border-solid border-gray-400 bg-gray-300 rounded"
+        class="mt-4 p-2 dfn-ad text-black border border-solid border-gray-400 bg-gray-300 rounded"
         >
         {% include subscribe.html %}
     </div>
     
-    <div class="dfn-ad text-2xl text-black text-center"><b>Support</b> the author of this blog</div>
+    <div class="dfn-ad mt-4 text-2xl text-black text-center"><b>Support</b> the author of this blog</div>
     <div 
-        class="flex flex-col items-center text-center border rounded p-4 mt-4 dfn-ad"
+        class="flex flex-col items-center text-center border rounded p-2 mt-2 dfn-ad"
         style="background-color: #4182E4;"
         >
         <a 
