Added a link for GitHub sponsorship.

--- a/_includes/support.html
+++ b/_includes/support.html
@@ -7,6 +7,7 @@
     </div>
     
     <div class="dfn-ad mt-4 text-2xl text-black text-center"><b>Support</b> the author of this blog</div>
+
     <div 
         class="flex flex-col items-center text-center border rounded p-4 mt-2 dfn-ad"
         style="background-color: #4182E4;"
@@ -29,6 +30,15 @@
             >
             Learn more
         </a>
+        <div class="text-2xl mt-8 leading-normal df-ad-sponsor-link">
+            <a 
+                class="text-white"
+                href="https://github.com/sponsors/ashleydavis"
+                >
+                Sponsor my open-source work
+            </a>
+            and receive a free licence for Data-Forge Notebook
+        </div>
     </div>
 
     <div 
