--- a/_includes/support.html
+++ b/_includes/support.html
@@ -34,6 +34,7 @@
             <a 
                 class="text-white"
                 href="https://github.com/sponsors/ashleydavis"
+                target="_blank"
                 >
                 Sponsor my open-source work
             </a>
