--- a/_includes/support.html
+++ b/_includes/support.html
@@ -8,6 +8,16 @@
     
     <div class="dfn-ad mt-4 text-2xl text-black text-center"><b>Support</b> the author of this blog</div>
 
+    <div class="text-2xl mt-8">
+        <a 
+            class="text-white"
+            href="https://github.com/sponsors/ashleydavis"
+            target="_blank"
+            >
+            Sponsor my open-source work
+        </a>
+    </div>
+ 
     <div 
         class="flex flex-col items-center text-center border rounded p-4 mt-2 dfn-ad"
         style="background-color: #4182E4;"
@@ -30,16 +40,6 @@
             >
             Learn more
         </a>
-        <div class="text-2xl mt-8 leading-normal df-ad-sponsor-link">
-            <a 
-                class="text-white"
-                href="https://github.com/sponsors/ashleydavis"
-                target="_blank"
-                >
-                Sponsor my open-source work
-            </a>
-            and receive a free licence for Data-Forge Notebook
-        </div>
     </div>
 
     <div 
