--- a/_includes/support.html
+++ b/_includes/support.html
@@ -6,12 +6,9 @@
         {% include subscribe.html %}
     </div>
     
-    <div class="dfn-ad mt-4 text-2xl text-black text-center"><b>Support</b> the author of this blog</div>
-    
-    <div 
-        class="flex flex-col items-center text-center border rounded p-4 mt-2 dfn-ad"
-        style="background-color: #4182E4;"
-        >
+    <div class="flex flex-col items-center">
+        <div class="dfn-ad mt-4 text-2xl text-black text-center"><b>Support</b> the author of this blog</div>
+        
         <div class="text-2xl mt-8">
             <a 
                 href="https://github.com/sponsors/ashleydavis"
@@ -20,72 +17,77 @@
                 Sponsor my open-source work
             </a>
         </div>
-        <a 
-            target="_blank"
-            href="https://www.data-forge-notebook.com" 
+    
+        <div 
+            class="flex flex-col items-center text-center border rounded p-4 mt-2 dfn-ad"
+            style="background-color: #4182E4;"
             >
-            <img 
-                class="w-full" 
-                src="/content/images/2019/10/dfn-logo.png" 
-                alt="Data-Forge Notebook"
+            <a 
+                target="_blank"
+                href="https://www.data-forge-notebook.com" 
                 >
-        </a>
-        <div class="text-2xl mt-4 leading-normal">Exploratory coding, data analysis and visualization for JavaScript and TypeScript</div>
-        <a 
-            target="_blank"
-            href="https://www.data-forge-notebook.com" 
-            class="inline-block font-bold border rounded text-blue-500 border-white hover:text-blue-700 bg-white p-8 pt-3 pb-3 mt-8"
-            >
-            Learn more
-        </a>
-    </div>
-
-    <div 
-        class="flex flex-col items-center text-center border rounded p-4 mt-8 dfn-ad"
-        style="background-color: #313130;"
-        >
-        <a 
-            target="_blank"
-            href="http://bit.ly/2o0aDsP" 
-            >
-            <img 
-                class="w-full" 
-                src="/content/images/2019/10/BMDK.png" 
-                alt="Bootstrapping Microservices with Docker, Kubernetes and Terraform"
+                <img 
+                    class="w-full" 
+                    src="/content/images/2019/10/dfn-logo.png" 
+                    alt="Data-Forge Notebook"
+                    >
+            </a>
+            <div class="text-2xl mt-4 leading-normal">Exploratory coding, data analysis and visualization for JavaScript and TypeScript</div>
+            <a 
+                target="_blank"
+                href="https://www.data-forge-notebook.com" 
+                class="inline-block font-bold border rounded text-blue-500 border-white hover:text-blue-700 bg-white p-8 pt-3 pb-3 mt-8"
                 >
-        </a>
-        <div class="text-2xl mt-4 leading-normal">A project-based guide to building a microservices application with modern tooling</div>
-        <a 
-            target="_blank"
-            href="http://bit.ly/2o0aDsP" 
-            class="inline-block font-bold border rounded text-blue-500 border-white hover:text-blue-700 bg-white p-8 pt-3 pb-3 mt-8"
-            >
-            Learn more
-        </a>
-    </div>
+                Learn more
+            </a>
+        </div>
 
-    <div 
-        class="flex flex-col items-center text-center border rounded p-4 mt-8 dfn-ad"
-        style="background-color: #01313F;"
-        >
-        <a 
-            target="_blank"
-            href="http://bit.ly/2t2cJu2" 
+        <div 
+            class="flex flex-col items-center text-center border rounded p-4 mt-8 dfn-ad"
+            style="background-color: #313130;"
             >
-            <img 
-                class="w-full" 
-                src="/content/images/2019/10/JSDW.png" 
-                alt="Data Wrangling with JavaScript"
+            <a 
+                target="_blank"
+                href="http://bit.ly/2o0aDsP" 
                 >
-        </a>
-        <div class="text-2xl mt-4 leading-normal">A practical and comprehensive guide to working with data in JavaScript</div>
-        <a 
-            target="_blank"
-            href="http://bit.ly/2t2cJu2" 
-            class="inline-block font-bold border rounded text-blue-500 border-white hover:text-blue-700 bg-white p-8 pt-3 pb-3 mt-8"
-            >
-            Learn more
-        </a>
-    </div>
+                <img 
+                    class="w-full" 
+                    src="/content/images/2019/10/BMDK.png" 
+                    alt="Bootstrapping Microservices with Docker, Kubernetes and Terraform"
+                    >
+            </a>
+            <div class="text-2xl mt-4 leading-normal">A project-based guide to building a microservices application with modern tooling</div>
+            <a 
+                target="_blank"
+                href="http://bit.ly/2o0aDsP" 
+                class="inline-block font-bold border rounded text-blue-500 border-white hover:text-blue-700 bg-white p-8 pt-3 pb-3 mt-8"
+                >
+                Learn more
+            </a>
+        </div>
 
+        <div 
+            class="flex flex-col items-center text-center border rounded p-4 mt-8 dfn-ad"
+            style="background-color: #01313F;"
+            >
+            <a 
+                target="_blank"
+                href="http://bit.ly/2t2cJu2" 
+                >
+                <img 
+                    class="w-full" 
+                    src="/content/images/2019/10/JSDW.png" 
+                    alt="Data Wrangling with JavaScript"
+                    >
+            </a>
+            <div class="text-2xl mt-4 leading-normal">A practical and comprehensive guide to working with data in JavaScript</div>
+            <a 
+                target="_blank"
+                href="http://bit.ly/2t2cJu2" 
+                class="inline-block font-bold border rounded text-blue-500 border-white hover:text-blue-700 bg-white p-8 pt-3 pb-3 mt-8"
+                >
+                Learn more
+            </a>
+        </div>
+    </div>
 </aside>
