--- a/_includes/support.html
+++ b/_includes/support.html
@@ -6,10 +6,10 @@
         {% include subscribe.html %}
     </div>
     
-    <div class="flex flex-col items-center">
+    <div class="flex flex-col items-center mt-4">
         <div class="dfn-ad mt-4 text-2xl text-black text-center"><b>Support</b> the author of this blog</div>
         
-        <div class="text-2xl mt-8">
+        <div class="text-2xl mt-4">
             <a 
                 href="https://github.com/sponsors/ashleydavis"
                 target="_blank"
