--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,7 +18,7 @@ body_class: post-template
     <article class="post {{page.post_class}}">
 
         <div class="flex flex-wrap">
-            <div class="w-full md:w-3/4 lg:w-3/4 xl:w-3/4 p-2">
+            <div class="w-full md:w-3/4 lg:w-3/4 xl:w-3/4">
                 <div>
                     <header class="post-header">
                         <h1 class="post-title">{{page.title}}</h1>
