--- a/_includes/support.html
+++ b/_includes/support.html
@@ -1,4 +1,4 @@
-<aside>
+<aside class="pl-2">
     <div class="mt-1 dfn-ad text-2xl text-black text-center">Be updated before anyone else...</div>
     <div 
         class="mt-4 p-2 dfn-ad text-black border border-solid border-gray-400 bg-gray-300 rounded"
